Cambios Guillem mediodia

--- a/views/pages/buyConfirmNoUser.ejs
+++ b/views/pages/buyConfirmNoUser.ejs
@@ -41,7 +41,7 @@
         document.getElementById("inputUserHiddenFactura").value = infoEnviar;
         document.getElementById("inputProductosHiddenFactura").value = idProductos;
         document.getElementById("formFactura").submit();
-        localStorage.removeItem("idProducto")
+        localStorage.removeItem("idProducto");
 
     }
 </script>
