--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,7 +37,7 @@
 
                 <form id="formVolverAdmin" method="POST" action="/volverAdmin">
                     <input type="hidden" name="infoAdmin" id="infoAdmin" value="">
-                    <a href="#" class="nav-link link-info" id="nombreAdmin" onclick=infoAdmin() type="submit">ADMIN</a>
+                    <a href="#" class="nav-link link-info" id="nombreAdmin" onclick=infoAdmin() type="submit"><h4>ADMIN</h4></a>
                 </form>
                 <a class="nav-link link-info" aria-current="page" href="/tienda">
                     <h4>Tienda</h4>
