--- a/views/pages/buscarHist.ejs
+++ b/views/pages/buscarHist.ejs
@@ -32,7 +32,7 @@
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">He leido y estoy de acuerdo con la privacidad de datos.</label>
+                        <label class="form-check-label" for="exampleCheck1" required>He leido y estoy de acuerdo con la privacidad de datos.</label>
                     </div>
                     <button type="submit" class="btn btn-outline-secondary bg-dark">Buscar</button>
                 </form>
