--- a/views/pages/busqueda.ejs
+++ b/views/pages/busqueda.ejs
@@ -49,9 +49,9 @@
                                                 <br>
                                                 <%= infoVinilos[i][j].precio %>,00 €
                                         </p>
-                                        <a href="#" class="btn btn-dark"
-                                            onclick="addProducto('<%= infoVinilos[i][j].id_vinilo %>')">Añadir al
-                                            carrito</a>
+                                        <input type="button" class="btn btn-outline-secondary bg-dark" value="Añadir al carrito" onclick="addProducto('<%= infoVinilos[i][j].id_vinilo %>')">
+                                           
+                            
                                     </div>
                                 </form>
 
