--- a/views/pages/busquedaTitulo.ejs
+++ b/views/pages/busquedaTitulo.ejs
@@ -49,9 +49,8 @@
                                         <br>
                                         <%= infoVinilos2[0].precio %>,00 €
                                 </p>
-                                <a href="#" class="btn btn-dark"
-                                    onclick="addProducto('<%= infoVinilos2[0].id_vinilo %>')">Añadir al
-                                    carrito</a>
+                                <input type="button" class="btn btn-outline-secondary bg-dark" value="Añadir al carrito"
+                                    onclick="addProducto('<%= infoVinilos2[0].id_vinilo %>')">
                             </div>
                         </form>
 
