--- a/views/pages/perfil.ejs
+++ b/views/pages/perfil.ejs
@@ -43,7 +43,7 @@
                   <p class="card-text">
                     <%= infoVinilos[i].autor %>
                       <br>
-                      <%= infoVinilos[i].precio %>
+                      <%= infoVinilos[i].precio %>,00 €
                   </p>
                   <input type="button" class="btn btn-outline-secondary bg-dark" value="Añadir al carrito"
                     onclick="addProducto('<%= infoVinilos[i].id_vinilo %>')">
